TOC fixes (#1452)
* TOC fixes

Section headings should not link
Table of Contents link should not be included in mobile view (because there is a contents accordion section)
TOC no longer needs View in Webview because all contents are links to webview

* Fix TOC height and webview links

Made toc-slideout relative positioned again, so `top` works.
Fixed links for sections (like Index) in TOC. Turns out webview_link doesn't work for those.

* Update test data

* Pad so close icon does not overlap contents

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -139,5 +139,11 @@
             }
         }
 
+        @include width-up-to($phone-max) {
+            &.toc-option {
+                display: none;
+            }
+        }
+
     }
 }
