--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -55,23 +55,27 @@
             > .toc-slideout {
                 border-right: thin solid ui-color(form-border);
                 overflow-y: auto;
-                padding: 3rem;
+                padding: 3rem 1rem 3rem;
+                position: relative;
                 transition: width 0.3s;
                 width: 30vw;
             }
 
+            .toc-drawer {
+                padding-right: 2.5rem;
+            }
+
             .close-toc {
                 align-items: center;
-                background-color: rgba(ui-color(white), 0.5);
                 border-radius: 50%;
                 cursor: pointer;
                 display: flex;
-                height: 3.2rem;
+                height: 2.8rem;
                 justify-content: center;
                 position: sticky;
                 float: right;
                 top: 0;
-                width: 3.2rem;
+                width: 2.8rem;
             }
         }
 
